<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/ttrss" >
        <EditTextPreference
            android:defaultValue=""
            android:inputType="textUri"
            android:key="url"
            android:title="@string/api_url" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="verify"
            android:title="@string/verify_https_certificate" />
        <EditTextPreference
            android:defaultValue=""
            android:inputType="text"
            android:key="username"
            android:persistent="false"
            android:title="@string/username" />
        <EditTextPreference
            android:defaultValue=""
            android:inputType="textPassword"
            android:key="password"
            android:persistent="false"
            android:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sync" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/sync_period"
            android:entryValues="@array/sync_period_values"
            android:key="period"
            android:persistent="false"
            android:title="@string/sync_period" />
        <ListPreference
            android:defaultValue="500"
            android:entries="@array/sync_count"
            android:entryValues="@array/sync_count_values"
            android:key="articles"
            android:title="@string/articles_to_sync" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debugging" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="dont_sync_local_state"
            android:title="@string/dont_sync_local_state" />
    </PreferenceCategory>
</PreferenceScreen>
